@@ -1,29 +1,22 @@
 
 Installation Instructions for CMFTestCase
 
-    Requires Python 2.1 and Zope 2.5 or higher.
+    Requires Python 2.1 and Zope 2.6 or higher.
 
     Requires CMF 1.4 or higher.
 
-    Requires ZopeTestCase 0.9.8 or higher.
+    Requires ZopeTestCase 0.9.9 or higher.
 
     1. Extract the tarball into the 'Products' directory of a
-       CMF-enabled Zope instance.
+       Zope instance with CMF 1.4, 1.5, 1.6, 2.0 or 2.1 installed.
 
-    2. Cd into the CMFTestCase directory and type::
+    2. Run the CMFTestCase tests
 
-        export SOFTWARE_HOME=/path/to/Zope/lib/python
+       Zope 2.6::
 
-        python runalltests.py
+        python /path/to/Zope/utilities/testrunner.py -qid Products/CMFTestCase
 
-    You must use the same Python that is running your Zope here.
-    On Windows this may for example be::
+      Zope 2.7 and higher::
 
-      set SOFTWARE_HOME="C:\Program Files\Zope\lib\python"
-
-      "C:\Program Files\Zope\bin\python.exe" runalltests.py
-
-    Or, as always, you can use the testrunner to run the tests::
-
-      python /path/to/Zope/bin/testrunner.py -qia
+       ./bin/zopectl test --dir Product/CMFTestCase
 
